# Sistema-de-Reservas-de-Eventos-Masivos

./: .env_example  .gitignore  GEMINI.md  Insomnia_2025-12-10.yaml  README.md  arbol.txt  pyproject.toml  requirements.txt
config/: settings.py  urls.py
core/templates/core/: home.html
usuarios/: forms.py  models.py  permissions.py  serializers.py  tests.py  views.py  views_api.py
usuarios/migrations/: 0001_initial.py  0002_alter_usuario_email_alter_usuario_username_and_more.py
usuarios/templates/: base.html  login.html  register.html
usuarios/templates/usuarios/: login.html  register.html
usuarios/tests/: test_api.py  test_auth.py  test_models.py  test_views.py
